# fdf

./: .gitignore  CMakeLists.txt
includes/: fdf.h  line.h  rotate.h  struct_arr.h
libs/get_next_line_42/: CMakeLists.txt
libs/get_next_line_42/libs/libft/: CMakeLists.txt
libs/libft_3/: CMakeLists.txt  libft.h
libs/minilibx/: CMakeLists.txt
libs/minilibx/man/man1/: ._mlx.1  ._mlx_loop.1  ._mlx_new_image.1  ._mlx_new_window.1  ._mlx_pixel_put.1
libs/minilibx/man/man3/: ._mlx.1  ._mlx_loop.1  ._mlx_new_image.1  ._mlx_new_window.1  ._mlx_pixel_put.1
src/: fdf.c  line.c  main.c  rotate.c  struct_arr.c
test_maps/: ._10-2.fdf  ._10-70.fdf  ._100-6.fdf  ._20-60.fdf  ._42.fdf  ._50-4.fdf  ._basictest.fdf  ._elem.fdf  ._mars.fdf  ._pentenegpos.fdf  ._plat.fdf  ._pnp_flat.fdf  ._pylone.fdf  ._pyra.fdf  ._pyramide.fdf
